<?xml version="1.0"?>
<package format="2">
    <name>slam_roscore</name>
    <version>0.0.1</version>
    <description>A RosNode to print the schema of a given point cloud topic</description>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    <maintainer email="pierre.dellenbach@mines-paristech.com">Pierre Dellenbach</maintainer>
    <depend>std_msgs</depend>
    <depend>roscpp</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>message_runtime</depend>
</package>